Update Rails App w/ Notes from Lecture

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,4 @@
-<h1>Something about Emma</h1>
+<h1>Here is some information about Batch #1514 🐝</h1>
 
+<%= link_to '<- Go back home', root_path %>
 
