--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,4 @@
-<h1>Hey there👋</h1>
-<p>This is my contact:</p>
-<p>emma@ruenzel.de</p>
+<h1>Contact of Emma</h1>
+<p>✉️ emma@ruenzel.de</p>
 
-<%= link_to '<- back home', root_path, class: "btn" %>
+<%= link_to '<- Go back home', root_path %>
